# hordyn

./: .gitignore  CMakeLists.txt  Cow419-2ndWave-BlueCurve.csv  Cow419-2ndWave-GreenCurve.csv  Cow419-2ndWave-OrangeCurve.csv  Cow419-2ndWave-RedCurve.csv  LICENSE  README.md  heatmap_phi_multi1.py  plotHeatMap.py  plot_phi_multi_animation.py  plot_x.py
src/2d/: 2d.cpp  2d_working_copy.cpp  CMakeLists.txt  simplified_testcase2.cpp
src/bridge-ode-pde/: CMakeLists.txt  main-2fol.cpp  main-c1c2.cpp  main-c1only.cpp  main.cpp  main.cpp.bk  main1.cpp  main_euler.cpp  main_rk4_negaitive_phi.cpp  utils.cpp  utils.hpp  visualise.py  visualise_test.py
src/hordyn/: CMakeLists.txt  bio_params.cpp  bio_params.hpp  computations.cpp  computations.hpp  compute_dt.cpp  compute_dt.hpp  compute_rhs.cpp  main.cpp  utils.cpp  utils.hpp
src/hordyn-2016/: computations.cpp  domain.hpp  params.hpp  time.cpp  time.hpp  utils.hpp
src/hordyn-2016-1cycle/: .animate_colormap.py.swp  .animate_colormap_fixed.py.swp  .computations.cpp.swp  .main.cpp.swp  .plot_variables.py.swp  CMakeLists.txt  computations.cpp  computations.hpp  compute_rhs.cpp  compute_rhs.hpp  domain.cpp  main.cpp  params.hpp  time.hpp  utils.cpp  utils.hpp
src/hordyn-2016-1cycle/python/: 1dplot_modified.py  (+6 more)
src/hordyn-parallel/: CMakeLists.txt  computations.cpp  computations.hpp  compute_rhs.hpp  domain.cpp  domain.hpp  fragments.cpp  log.cpp  log.hpp  main.cpp  params.hpp  utils.cpp  utils.hpp
src/python/: 1_plot.py  2d_plot_fullmodel.py  check.py  line_plot.py  plot.py  plot_initial_function.py  plot_test_fluxdoubling.py
(+33 files in other folders)
